--- a/bin/Makefile
+++ b/bin/Makefile
@@ -5,5 +5,6 @@ PREFIX=$(HOME)
 install:
 	cp *.sh $(PREFIX)/bin
 	cp hpss $(PREFIX)/bin
-	cp watch_hpss $(PREFIX)/bin
+	cp mlso-archiverd $(PREFIX)/bin
+	cp mlso-archiver.cfg $(PREFIX)/bin
 
