Install compare_hpss_dirs

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -5,6 +5,7 @@ PREFIX=$(HOME)
 install:
 	cp *.sh $(PREFIX)/bin
 	cp hpss $(PREFIX)/bin
+	cp compare_hpss_dirs $(PREFIX)/bin
 	cp mlso-archiverd $(PREFIX)/bin
 	cp mlso-archiver.cfg $(PREFIX)/bin
 
