Adding clock checking scripts

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -8,4 +8,7 @@ install:
 	cp compare_hpss_dirs $(PREFIX)/bin
 	cp mlso-archiverd $(PREFIX)/bin
 	cp mlso-archiver.cfg $(PREFIX)/bin
+	cp check_clock*.sh $(PREFIX)/bin
+	cp log_clocks.sh $(PREFIX)/bin
+	cp plot_clocks $(PREFIX)/bin
 
