Adding kodiak to clock check

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,6 +1,7 @@
 .PHONY: install
 
 PREFIX=$(HOME)
+SCP_OPTIONS=-i /home/mgalloy/.ssh/id_rsa2
 
 install:
 	cp *.sh $(PREFIX)/bin
@@ -9,5 +10,10 @@ install:
 	cp mlso-archiverd $(PREFIX)/bin
 	cp mlso-archiver.cfg $(PREFIX)/bin
 	cp check_clock*.sh $(PREFIX)/bin
+	scp $(SCP_OPTIONS) check_clock*.sh kodiak.mlso.ucar.edu:$(PREFIX)/bin
+	#scp $(SCP_OPTIONS) check_clock*.sh dusk.mlso.ucar.edu:$(PREFIX)/bin
 	cp log_clocks.sh $(PREFIX)/bin
+	scp $(SCP_OPTIONS) log_clocks.sh kodiak.mlso.ucar.edu:$(PREFIX)/bin
+	#scp $(SCP_OPTIONS) log_clocks.sh dusk.mlso.ucar.edu:$(PREFIX)/bin
 	cp plot_clocks $(PREFIX)/bin
+
