Adding dusk to clocks checked

--- a/bin/Makefile
+++ b/bin/Makefile
@@ -1,6 +1,7 @@
 .PHONY: install
 
 PREFIX=$(HOME)
+DUSK_PREFIX=/export/data1/$(HOME)
 SCP_OPTIONS=-i /home/mgalloy/.ssh/id_rsa2
 
 install:
@@ -11,9 +12,9 @@ install:
 	cp mlso-archiver.cfg $(PREFIX)/bin
 	cp check_clock*.sh $(PREFIX)/bin
 	scp $(SCP_OPTIONS) check_clock*.sh kodiak.mlso.ucar.edu:$(PREFIX)/bin
-	#scp $(SCP_OPTIONS) check_clock*.sh dusk.mlso.ucar.edu:$(PREFIX)/bin
+	scp $(SCP_OPTIONS) check_clock*.sh dusk.mlso.ucar.edu:$(DUSK_PREFIX)/bin
 	cp log_clocks.sh $(PREFIX)/bin
 	scp $(SCP_OPTIONS) log_clocks.sh kodiak.mlso.ucar.edu:$(PREFIX)/bin
-	#scp $(SCP_OPTIONS) log_clocks.sh dusk.mlso.ucar.edu:$(PREFIX)/bin
+	scp $(SCP_OPTIONS) log_clocks.sh dusk.mlso.ucar.edu:$(DUSK_PREFIX)/bin
 	cp plot_clocks $(PREFIX)/bin
 
