--- a/bin/Makefile
+++ b/bin/Makefile
@@ -20,3 +20,5 @@ install:
 	cp olog2pdf.sh $(PREFIX)/bin
 	cp yesterday_olog2pdf.sh $(PREFIX)/bin
 	cp mlso_servers_cmd $(PREFIX)/bin
+	cp fix_noncordyn_files.sh $(PREFIX)/bin
+	cp find_noncordyn_files.sh $(PREFIX)/bin
